--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@codemirror/lang-javascript": "^6.2.1",
     "@types/node": "18.15.11",
     "@types/react": "18.0.35",
     "@types/react-dom": "18.0.11",
+    "@uiw/codemirror-theme-vscode": "^4.21.13",
+    "@uiw/react-codemirror": "^4.21.13",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "firebase": "^10.1.0",
