--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react-dom": "18.0.11",
     "@uiw/codemirror-theme-vscode": "^4.21.13",
     "@uiw/react-codemirror": "^4.21.13",
+    "assert": "^2.1.0",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "firebase": "^10.1.0",
